--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@xenova/transformers": "^2.17.2",
     "ethers": "^6.16.0",
     "framer-motion": "^12.34.3",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.575.0",
     "pinata-web3": "^0.5.4",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.13.1",
