--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.13.1",
+    "recharts": "^3.7.0",
     "tailwindcss": "^4.2.1"
   },
   "devDependencies": {
