--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,8 @@
 SUPABASE_URL="https://ngbqhkqoazneombiczo.supabase.co"
 SUPABASE_SERVICE_ROLE_KEY="sb_publishable_SEVvPL7ScxUFr2XPK-KTPw__1hn8y43"
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="587"
+SMTP_SECURE="false"
+SMTP_USER="vedantgosavi0369@gmail.com"
+SMTP_PASS="xacy ihoo ynxu mxyp"
+EMAIL_FROM="JeevanConnect Security <vedantgosavi0369@gmail.com>"
